--- a/pom.xml
+++ b/pom.xml
@@ -26,4 +26,9 @@
 			<version>1.2.47</version>
 		</dependency>
 	    </dependencies>
+	
+	<properties>
+           <maven.compiler.source>1.6</maven.compiler.source>
+           <maven.compiler.target>1.6</maven.compiler.target>
+       </properties>
 </project>
